[gd_scene load_steps=4 format=3 uid="uid://bt6uy35uuifre"]

[ext_resource type="Script" uid="uid://b3l1aao648s1s" path="res://Scripts/InventorySlot.gd" id="1_u5fld"]
[ext_resource type="Texture2D" uid="uid://bwbnqri3fqbl0" path="res://Assets/icon.svg" id="2_clr8n"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bhpio"]

[node name="inventorySlot" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 150.0
offset_bottom = 150.0
size_flags_horizontal = 3
script = ExtResource("1_u5fld")

[node name="OuterBorder" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.080783345, 0.080783345, 0.080783345, 1)

[node name="InnerBorder" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 6.0
offset_right = -6.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.16565654, 0.16565633, 0.16565648, 1)

[node name="ItemIcon" type="TextureRect" parent="InnerBorder"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
texture = ExtResource("2_clr8n")
expand_mode = 1
stretch_mode = 5

[node name="ItemQuantity" type="Label" parent="InnerBorder"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -5.0
offset_right = -2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "1"
horizontal_alignment = 2

[node name="ItemButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_bhpio")

[node name="DetailsPanel" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_top = -135.0
offset_right = 240.0
offset_bottom = -5.0
color = Color(0.080783345, 0.080783345, 0.080783345, 1)

[node name="ItemName" type="Label" parent="DetailsPanel"]
layout_mode = 1
offset_left = 5.0
offset_right = 45.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 24
text = "ItemName"

[node name="ItemType" type="Label" parent="DetailsPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 5.0
offset_top = -38.0
offset_right = 78.0
offset_bottom = -15.0
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.78431374)
theme_override_font_sizes/font_size = 14
text = "ItemType"

[node name="ItemEffect" type="Label" parent="DetailsPanel"]
layout_mode = 1
offset_left = 5.0
offset_top = 49.0
offset_right = 234.56522
offset_bottom = 125.0
text = "ItemEffect"
autowrap_mode = 2

[node name="UsagePanel" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_top = -110.0
offset_right = 240.0
offset_bottom = -5.0
color = Color(0.16565654, 0.16565633, 0.16565648, 1)

[node name="UseButton" type="Button" parent="UsagePanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -115.0
offset_top = 5.0
offset_right = 115.0
offset_bottom = 50.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "Use"

[node name="DropButton" type="Button" parent="UsagePanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -115.0
offset_top = -50.0
offset_right = 115.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "Drop"

[connection signal="mouse_entered" from="ItemButton" to="." method="_on_item_button_mouse_entered"]
[connection signal="mouse_exited" from="ItemButton" to="." method="_on_item_button_mouse_exited"]
[connection signal="pressed" from="ItemButton" to="." method="_on_item_button_pressed"]
